--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,36 @@ main:
     url : "https://jkc-mycode.github.io"
   - title : "Category"
     url : /categories/
-  - title : "Tag"
-    url : /tags/
+  # - title : "Tag"
+  #   url : /tags/
+
+docs:
+  - title: Database
+    children:
+      - title: "Oracle"
+        url: oracle/
+        category: "oracle"
+      - title: "MS-SQL"
+        url: mssql/
+        category: "mssql"
+      - title: "MariaDB"
+        url: mariadb/
+        category: "mariadb"
+  - title: Server
+    children:
+      - title: "Ubuntu"
+        url: ubuntu/
+        category: "ubuntu"
+      - title: "Windows Server"
+        url: windows-server/
+        category: "windows-server"
+  - title: Etc
+    children:
+      - title: "Jekyll"
+        url: jekyll/
+        category: "jekyll"
+
+
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
